fix: table border overflow issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -674,6 +674,9 @@ select {
 .block {
   display: block;
 }
+.inline-block {
+  display: inline-block;
+}
 .flex {
   display: flex;
 }
